<resources>
    <string name="app_name">WithFriends</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage">Homepage</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Login">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="register">register</string>
    <string name="confirm">confirm</string>
    <string name="max">max</string>
    <string name="if_you_forgot_your_password_click_here">If you forgot your password click here</string>
    <string name="reset">reset</string>
    <string name="recovery">Recovery</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="insert_your_account_details">INSERT YOUR ACCOUNT DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">date of birth</string>
    <string name="input_your_email_please">Input your email please</string>
    <string name="type_your_email_and_press_confirm_you_will_receive_an_email_shortly">Type your email and press
        confirm. \nYou will receive an email shortly
    </string>
    <string name="faq">FAQ</string>
    <string name="policies">policies</string>
    <string name="contacts">contacts</string>
    <string name="Contacts">Contacts:</string>
    <string name="FAQ">FAQ:</string>
    <string name="Policies">Policies:</string>
    <string name="emaill">Email:</string>
    <string name="mborijnlandwithfriends_gmail_com">mboRijnlandWithFriends@gmail.com</string>
    <string name="number">Number:</string>
    <string name="_31_088_222_1777">+31 088 222 1777</string>
    <string name="van_doornenplantsoen_11_2722_za_zoetermeer">Van Doornenplantsoen 11, 2722 ZA Zoetermeer</string>
    <string name="address">Address:</string>
    <string name="type_your_email_and_press_confirm_you_will_receive_an">Type your email and press confirm you will
        receive an email shortly
    </string>
    <string name="type_your_query_here">Type your query here...</string>
    <string name="submit">Submit</string>
    <string name="any_question">Any question?</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="passwordCofirm">Confirm Password</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="apply">apply</string>
    <string name="delete_your_account">delete your account</string>
    <string name="t_t_t_t_t_t_t_t_t_t_t_t_t_t_tcollected_data_nduring_the_use_of_our_services_we_may_collect_data_which_makes_you_identifiable_nwe_reserve_the_right_to_collect_n_t_t_u2022_t_tgps_data_n_t_t_u2022_t_tname_n_t_t_u2022_t_temail_address_nthe_purpose_for_collecting_data_nwe_collect_your_data_with_the_sole_purpose_of_providing_our_services_and_database_with_the_required_data_for_working_functionality_without_the_collection_of_this_data_the_services_will_not_work_as_intended_and_cannot_be_allowed_n_n_t_t_t_t_t_t_t_t_t_t_t_thow_we_collect_this_data_nduring_the_use_of_our_services_we_may_collect_data_which_makes_you_identifiable_nwe_reserve_the_right_to_collect_n_t_t_u2022_t_tgps_tracking_data_n_t_t_u2022_t_tinput_forms_n_t_t_u2022_t_thandling_your_data_nyour_data_will_be_used_for_the_functionality_of_our_services_and_will_not_be_sold_or_shared_with_any_other_parties_outside_of_myfriends_inc_ndata_will_be_held_in_full_compliance_with_regulations_and_timeframes_required_under_gdpr">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\tCollected Data \nDuring the use of our services, we may collect data which makes
        you identifiable. \nWe reserve the right to collect: \n\t\t•\t\tGPS Data \n\t\t•\t\tName \n\t\t•\t\tEmail
        Address \nThe purpose for collecting Data \nWe collect your data with the sole purpose of providing our services
        and database with the required data for working functionality, without the collection of this data the services
        will not work as intended and cannot be allowed. \n\n\t\t\t\t\t\t\t\t\t\t\t\tHow we collect this Data: \nDuring
        the use of our services, we may collect data which makes you identifiable. \nWe reserve the right to collect:
        \n\t\t•\t\tGPS Tracking Data \n\t\t•\t\tInput Forms \n\t\t•\t\tHandling your data \nYour data will be used for
        the functionality of our services and will not be sold or shared with any other parties outside of MyFriends
        Inc. \nData will be held in full compliance with regulations and timeframes required under GDPR.
    </string>
</resources>