<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Contact" android:id="@+id/contactFragment">
    <TextView
            android:text="@string/Contacts"
            android:layout_width="wrap_content"
            android:layout_height="55dp" android:id="@+id/contacts"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/EmailTitle" app:layout_constraintHorizontal_bias="0.497"
            android:textColor="#00BCD4"/>
    <TextView
            android:text="@string/emaill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/EmailTitle"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contacts"
            app:layout_constraintBottom_toTopOf="@+id/emailView"
            app:layout_constraintHorizontal_bias="0.498" android:textStyle="bold"/>
    <TextView
            android:text="@string/mborijnlandwithfriends_gmail_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/emailView"
            app:layout_constraintTop_toBottomOf="@+id/EmailTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/numberTitle"/>
    <TextView
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/numberTitle"
            app:layout_constraintTop_toBottomOf="@+id/emailView"
            app:layout_constraintBottom_toTopOf="@+id/numberView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"/>
    <TextView
            android:text="@string/_31_088_222_1777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/numberView"
            app:layout_constraintTop_toBottomOf="@+id/numberTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toTopOf="@+id/addressTitle"/>
    <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/numberView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="1660dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/addressTitle"/>
    <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addressTitle"
            app:layout_constraintTop_toBottomOf="@+id/numberView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintBottom_toTopOf="@+id/addressViiew"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/van_doornenplantsoen_11_2722_za_zoetermeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addressViiew"
            app:layout_constraintTop_toBottomOf="@+id/addressTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/questionTitle"/>
    <TextView
            android:text="@string/any_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/questionTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="179dp" android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintTop_toBottomOf="@+id/addressViiew"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/inputQuery"
            android:textStyle="bold" android:layout_marginTop="32dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_query_here"
            app:layout_constraintTop_toBottomOf="@+id/questionTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="143dp" android:layout_marginEnd="149dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            android:id="@+id/inputQuery"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/submitButton"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/submitButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputQuery" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="153dp" android:layout_marginEnd="164dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="300dp"
            android:backgroundTint="#2196F3" app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>