<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <Button
            android:id="@+id/loginButton"
            android:layout_width="115dp"
            android:layout_height="58dp"
            android:text="@string/Login"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#2196F3"
            android:layout_marginStart="148dp" android:layout_marginEnd="148dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textColor="#00BCD4"
            app:layout_constraintBottom_toTopOf="@+id/emailInput" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:id="@+id/registerButton"
            android:layout_width="114dp"
            android:layout_height="57dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#2196F3" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toTopOf="@+id/textUpRecovery"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="301dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout" tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="216dp"
            android:layout_height="52dp"
            android:hint="@string/email" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:id="@+id/emailInput" android:textColorHint="#D8698687" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/if_you_forgot_your_password_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textUpRecovery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/recoveryButton"/>
    <Button
            android:text="@string/recovery"
            android:layout_width="119dp"
            android:layout_height="38dp" android:id="@+id/recoveryButton"
            android:background="@null" android:backgroundTint="#FFFFFF"
            android:hapticFeedbackEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#03A9F4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="82dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="450dp" app:layout_constraintBottom_toTopOf="@+id/policiesButton"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/password" android:layout_marginTop="16dp"/>
    <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="157dp"
            android:layout_height="102dp" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="132dp" android:layout_marginEnd="132dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo" app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintVertical_bias="0.01999998"/>
    <Button
            android:text="@string/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/faqButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="570dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:background="@null" android:backgroundTint="#FFFFFF"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/policiesButton"/>
    <Button
            android:text="@string/policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/policiesButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contactButton" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/faqButton"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="570dp"
            android:background="@null" android:backgroundTint="#FFFFFF"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/contactButton"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="570dp"
            android:background="@null" android:backgroundTint="#FFFFFF"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/policiesButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>