<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoggedHomepage" android:id="@+id/loggedHomepageFragment" android:background="#00FFFFFF">

    <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="86dp"
            android:layout_height="66dp" android:id="@+id/imageLogo"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/messagesButton"
    />
    <Button
            android:text="@string/friends"
            android:layout_width="95dp"
            android:layout_height="59dp" android:id="@+id/friendsButton"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:layout_marginBottom="533dp"
            app:layout_constraintBottom_toTopOf="@+id/contactButton" android:textSize="12sp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/messagesButton" app:layout_constraintEnd_toStartOf="@+id/settingsButton"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/faqButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="570dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/policiesButton"/>
    <Button
            android:text="@string/policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/policiesButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contactButton" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/faqButton"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="570dp"
            android:background="@android:color/transparent"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/contactButton"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="570dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000" app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/policiesButton"
            android:background="@android:color/transparent"/>
    <Button
            android:text="@string/messages"
            android:layout_width="110dp"
            android:layout_height="59dp" android:id="@+id/messagesButton"
            app:layout_constraintStart_toEndOf="@+id/imageLogo"
            app:layout_constraintEnd_toStartOf="@+id/friendsButton"
            android:backgroundTint="#FFFFFF" android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@android:color/transparent" android:textSize="12sp" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/username"
            android:layout_width="0dp"
            android:layout_height="59dp" android:id="@+id/settingsButton"
            app:layout_constraintStart_toEndOf="@+id/friendsButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="12sp"
            android:background="@android:color/transparent"
            android:textColor="#2196F3" android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>